Styling & Functionality Tweaks
New copy & button color on the index hero and navigation bar; Removed
responsive function on apps.js;

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
     <div class="hero">
         <div class="container">
-            <h1 class="hero-headline">148 Cookie Street</h1>
+            <h1 class="hero-headline">Happiness is Homemade</h1>
             <p class="hero-tagline">custom cookies for any occasion</p>
             <a href="#"><button class="btn hero-btn">Thank you zombie boyfriends</button></a>
         </div>
