--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container">
             <h2>Gallery</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed risus erat, laoreet sed erat eu, rutrum laoreet dolor. Mauris odio dolor, auctor eu aliquet sed, lobortis sit amet purus.</p>
-            <button class="hero-btn"><a href="gallery.html">CLICK HERE TO SEE OUR WORK!</a></button>
+            <a href="gallery.html"><button class="btn gallery-index-btn">CLICK HERE TO SEE MY WORK</button></a>
         </div>
     </div>
     
