Fonts / About Me Updated / <hr> styles
Added Bebas Neue font. Updated the About Me section. <hr> styling.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div class="hero">
         <div class="container">
             <h1 class="hero-headline">Cookies Make Everything Better</h1>
+            <hr class="hr-pink">
             <p class="hero-tagline">Happiness is Homemade</p>
             <a href="#"><button class="btn hero-btn">LET'S CREATE SOMETHING TOGETHER!</button></a>
         </div>
@@ -48,7 +49,7 @@
             <div class="col col1">
               <img src="img/Cooker-100.png" alt="Freshly Baked Cookies" class="icon">
                <h2 class="col-header">Freshly Prepared</h2>
-               <hr class="col-hr">
+               <hr class="hr-turq hr-center">
                 <p class="col-copy">
                     Tacos viral hammock actually tumblr food truck. Pickled food truck freegan etsy knausgaard, meggings meh tattooed vice poutine aesthetic +1 locavore.
                 </p>
@@ -56,7 +57,7 @@
             <div class="col col2">
                <img src="img/Pastry%20Bag-100.png" alt="Customized" class="icon">
                 <h2 class="col-header">Uniquely Customized</h2>
-                <hr class="col-hr">
+                <hr class="hr-turq hr-center">
                 <p class="col-copy">
                     Tofu church-key pop-up artisan portland crucifix pickled. Brunch tacos skateboard pickled, waistcoat trust fund biodiesel flannel.
                 </p>
@@ -64,7 +65,7 @@
             <div class="col col3">
                <img src="img/Cookies-100.png" alt="Delicious Cookies" class="icon">
                 <h2 class="col-header">Delicious Cookies</h2>
-                <hr class="col-hr">
+                <hr class="hr-turq hr-center">
                 <p class="col-copy">
                     Letterpress tumblr slow-carb, taxidermy vice selfies truffaut pop-up asymmetrical messenger bag sartorial tote bag distillery. Heirloom PBR&amp;B banh mi kinfolk.
                 </p>
@@ -75,6 +76,7 @@
     <div class="galleryIndex">
         <div class="container">
             <h2>Gallery</h2>
+            <hr class="hr-pink hr-center">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed risus erat, laoreet sed erat eu, rutrum laoreet dolor. Mauris odio dolor, auctor eu aliquet sed, lobortis sit amet purus.</p>
             <a href="gallery.html"><button class="btn gallery-index-btn">CLICK HERE TO SEE MY WORK</button></a>
         </div>
@@ -84,8 +86,9 @@
         <div class="container">
             <div class="index-about">
                 <h2>About Me</h2>
-                <img src="img/logo.png" alt="Lisa Olson - 148 Cookie Street" class="about-avatar">
+                <hr class="hr-turq hr-center">
                 <p>Tacos viral hammock actually tumblr food truck. Pickled food truck freegan etsy knausgaard, meggings meh tattooed vice poutine aesthetic +1 locavore.</p>
+                <p>Sed risus erat, laoreet sed erat eu, rutrum laoreet dolor. Mauris odio dolor, auctor eu aliquet sed, lobortis sit amet purus.</p>
             </div>
         </div>
     </div>
