--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <div class="main-content">
         <div class="container">
             <div class="index-about">
+                <img src="img/logo.png" alt="148 Cookie Street" title="148 Cookie Street Custom Cookies" class="about-avatar">
                 <h2>About Me</h2>
                 <hr class="hr-turq hr-center">
                 <p>Tacos viral hammock actually tumblr food truck. Pickled food truck freegan etsy knausgaard, meggings meh tattooed vice poutine aesthetic +1 locavore.</p>
